src/tests/test-src/errors/E73-mod-keyword.syntran
// E73: mod-keyword
// A module name is a reserved language keyword

use let;
